--- a/accounts_service/pom.xml
+++ b/accounts_service/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>accounts_service</name>
     <description>accounts_service</description>
+    <packaging>jar</packaging>
     <url/>
     <licenses>
         <license/>
@@ -88,6 +89,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <image>
+                        <name>nasimkabir/${project.artifactId}:v2</name>
+                    </image>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
