--- a/loans_service/src/main/resources/application.yml
+++ b/loans_service/src/main/resources/application.yml
@@ -19,3 +19,21 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+   import:
+    - "application_test.yml"
+    - "application_prod.yml"
+  profiles:
+   active: "prod"
+
+build:
+  version: "1.0.2"
+
+loans:
+  message: "Welcome to EazyBank loans related Default APIs "
+  contactDetails:
+   name: "Nasim Kabir - SWE Lead"
+   email: "nasim@gmail.com"
+  onCallSupport:
+   - (+880) 1837745754
+   - (+880) 1837745758
