--- a/config/docker-compose/default/common-config.yml
+++ b/config/docker-compose/default/common-config.yml
@@ -4,6 +4,12 @@ services:
       - nasim_network
 
   microservice-base-config:
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
+      SPRING_PROFILES_ACTIVE: test
     extends:
       service: network-deploy-service
       deploy:
