--- a/mysql/docker-compose/dev/common-config.yml
+++ b/mysql/docker-compose/dev/common-config.yml
@@ -1,7 +1,7 @@
 services:
   network-deploy-service:
     networks:
-      - dev_network
+      - nasim_network
 
   microservice-db-config:
     extends:
