--- a/discovery/config_server/Dockerfile
+++ b/discovery/config_server/Dockerfile
@@ -1,51 +1,30 @@
 # ============================================
-# Build stage (Maven 3.6.3 with JDK 17)
+# Build Stage
 # ============================================
-FROM maven:3.6.3-openjdk-17-slim AS builder
+FROM maven:3.9.6-amazoncorretto-17 AS build
 
-WORKDIR /app
+WORKDIR /build
 
-# 1. Copy only the POM first to cache dependencies
 COPY pom.xml .
-# Verify we can download dependencies before building
-RUN mvn verify --fail-never dependency:resolve-plugins dependency:resolve
-
-# 2. Copy source code
 COPY src ./src
 
-# 3. Build with more memory and debug options
-RUN mvn clean package \
-    -DskipTests \
-    -Dmaven.test.skip=true \
-    -B \
-    -e \
-    -X \
-    -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+RUN mvn clean package -DskipTests
 
 # ============================================
-# Runtime stage (Lightweight JRE)
+# Runtime Stage
 # ============================================
-FROM eclipse-temurin:17.0.15_6-jre-noble
-
-# Create app user and directory
-RUN groupadd --system spring && \
-    useradd --system --gid spring spring && \
-    mkdir -p /app && \
-    chown spring:spring /app
+FROM amazoncorretto:17-alpine
 
 WORKDIR /app
 
-# Copy the built JAR file
-COPY --from=builder --chown=spring:spring /app/target/*.jar app.jar
+# Install wget for health check
+RUN apk add --no-cache curl
 
-USER spring
-
-HEALTHCHECK --interval=30s --timeout=3s \
-  CMD curl -f http://localhost:8071/actuator/health || exit 1
+COPY --from=build /build/target/*.jar /app/app.jar
 
 EXPOSE 8071
 
-# Production-ready JVM options
-ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC -XX:+ExitOnOutOfMemoryError"
+ENV JAVA_TOOL_OPTIONS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC -XX:+ExitOnOutOfMemoryError -Duser.home=/tmp"
 
-ENTRYPOINT ["sh", "-c", "exec java ${JAVA_OPTS} -jar app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
