--- a/discovery/config_server/pom.xml
+++ b/discovery/config_server/pom.xml
@@ -63,10 +63,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
                 <configuration>
-                    <image>
-                        <name>nasimkabir/${project.artifactId}:v8</name>
-                    </image>
+                    <to>
+                        <image>nasimkabir/${project.artifactId}:v10</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
