--- a/discovery/loans_service/src/main/resources/application.yml
+++ b/discovery/loans_service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8090
 spring:
   application:
-    name: loans_service
+    name: loans-service
   datasource:
     url: jdbc:h2:mem:testdb;
     driverClassName: org.h2.Driver
