api gateway impl done

--- a/api-gateway/config_server/src/main/resources/application.yml
+++ b/api-gateway/config_server/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
             - 'cards-server'
             - 'loans-server'
             - 'eureka-server'
+            - 'api-gateway-server'
           default-label: main
           clone-on-start: true
           force-pull: true
