--- a/api-gateway/docker-compose/prod/common-config.yml
+++ b/api-gateway/docker-compose/prod/common-config.yml
@@ -10,12 +10,17 @@ services:
       resources:
         limits:
           memory: 700m
+    environment:
+      CONFIG_SERVER_HOST: "configserver"
+      EUREKA_SERVICE_URL: "http://eurekaserver:8761/eureka/"
+#      SPRING_PROFILES_ACTIVE: "test"
 
   microservice-configserver-config:
     extends:
       service: microservice-base-config
     environment:
       SERVICE_NAME: "configserver"
+      SPRING_APPLICATION_NAME: "config-server"
       SPRING_CONFIG_IMPORT: "optional:configserver:http://configserver:8071"
 
   microservice-eureka-config:
@@ -23,6 +28,6 @@ services:
       service: microservice-configserver-config
     environment:
       SERVICE_NAME: "eurekaserver"
-      SPRING_PROFILES_ACTIVE: "docker"
+      SPRING_PROFILES_ACTIVE: "prod"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8761/eureka/"
       EUREKA_INSTANCE_PREFERIPADDRESS: "false"
