--- a/api-gateway/accounts_service/src/main/resources/application.yml
+++ b/api-gateway/accounts_service/src/main/resources/application.yml
@@ -1,5 +1,4 @@
-server:
-  port: 8080
+
 spring:
   application:
     name: accounts-service
@@ -24,7 +23,7 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import: "configserver:http://localhost:8071/"
+    import: "optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8071"
 
 
 # actuator
@@ -49,9 +48,6 @@ endpoints:
       enabled: true
   profiles:
     active: test
-  cloud:
-    config:
-      uri: http://localhost:8071
 
 
 eureka:
@@ -61,7 +57,7 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761/eureka/}
 
 info:
   app:
