--- a/api-gateway/docker-compose/prod/docker-compose.yml
+++ b/api-gateway/docker-compose/prod/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   configserver:
-    image: nasimkabir/config_server:v10
+    image: nasimkabir/config_server:v12
     container_name: configserver
     hostname: configserver
     environment:
@@ -44,32 +44,38 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: "nasimkabir/accounts_service:v10"
+    image: "nasimkabir/accounts_service:v12"
     container_name: accounts_service
     hostname: accounts-service
     environment:
       - SPRING_APPLICATION_NAME=accounts-service
       - SERVICE_NAME=accounts-service
-      - SPRING_PROFILES_ACTIVE=docker
+
     ports:
-      - "8080:8080"
+      - "8081:8081"
     depends_on:
       eurekaserver:
         condition: service_healthy
       configserver:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1" ]
+      #      test: "curl --fail --silent localhost:8761/actuator/health/readiness | grep UP || exit 1"
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 30s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
 
   loans:
-    image: "nasimkabir/loans_service:v10"
+    image: "nasimkabir/loans_service:v12"
     container_name: loans_service
     hostname: loans-service
     environment:
       - SPRING_APPLICATION_NAME=loans-service
       - SERVICE_NAME=loans-service
-      - SPRING_PROFILES_ACTIVE=docker
     ports:
       - "8090:8090"
     depends_on:
@@ -77,25 +83,59 @@ services:
         condition: service_healthy
       configserver:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1" ]
+      #      test: "curl --fail --silent localhost:8761/actuator/health/readiness | grep UP || exit 1"
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 30s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
 
 
   cards:
-    image: "nasimkabir/cards_service:v10"
+    image: "nasimkabir/cards_service:v12"
     container_name: cards_service
     hostname: cards-service
     environment:
       - SPRING_APPLICATION_NAME=cards-service
       - SERVICE_NAME=cards-service
-      - SPRING_PROFILES_ACTIVE=docker
     ports:
       - "9000:9000"
     depends_on:
       eurekaserver:
         condition: service_healthy
       configserver:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:9000/actuator/health || exit 1" ]
+      #      test: "curl --fail --silent localhost:8761/actuator/health/readiness | grep UP || exit 1"
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 30s
+    extends:
+      file: common-config.yml
+      service: microservice-eureka-config
+
+  gateway:
+    image: "nasimkabir/api-gateway-server:v1"
+    container_name: api-gateway-server
+    hostname: api-gateway-server
+    environment:
+      - SPRING_APPLICATION_NAME=api-gateway-server
+      - SERVICE_NAME=api-gateway-server
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE= "http://eurekaserver:8761/eureka/"
+    ports:
+      - "8072:8072"
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
         condition: service_healthy
     extends:
       file: common-config.yml
