--- a/api-gateway/loans_service/pom.xml
+++ b/api-gateway/loans_service/pom.xml
@@ -98,16 +98,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
                 <configuration>
-                    <image>
-                        <name>nasimkabir/${project.artifactId}:v11</name>
-                    </image>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <to>
+                        <image>nasimkabir/${project.artifactId}:v12</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
