implementing OpenTelemetry Protocol done

--- a/monitoring/accounts_service/src/main/resources/application.yml
+++ b/monitoring/accounts_service/src/main/resources/application.yml
@@ -54,6 +54,15 @@ management:
       application: ${spring.application.name}
 
 
+logging:
+  level:
+    com:
+      kabirit:
+        accounts: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
+
   profiles:
     active: test
 
