--- a/monitoring/loans_service/src/main/resources/application.yml
+++ b/monitoring/loans_service/src/main/resources/application.yml
@@ -51,6 +51,15 @@ management:
     tags:
       application: ${spring.application.name}
 
+
+logging:
+  level:
+    com:
+      kabirit:
+        loans_service: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
 eureka:
   instance:
     preferIpAddress: true
