--- a/monitoring/cards_service/src/main/resources/application.yml
+++ b/monitoring/cards_service/src/main/resources/application.yml
@@ -46,6 +46,14 @@ management:
     tags:
       application: ${spring.application.name}
 
+logging:
+  level:
+    com:
+      kabirit:
+        cards_service: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
 eureka:
   instance:
     preferIpAddress: true
